--- a/client/package.json
+++ b/client/package.json
@@ -28,6 +28,7 @@
     "jspdf-autotable": "^3.8.2",
     "leaflet": "^1.9.4",
     "lodash": "^4.17.21",
+    "lucide-react": "^0.479.0",
     "moment-timezone": "^0.5.46",
     "ph-locations": "^1.1.3",
     "phil-reg-prov-mun-brgy": "^1.1.0",
