--- a/client/package.json
+++ b/client/package.json
@@ -40,6 +40,7 @@
     "react-dom": "^18.3.1",
     "react-draggable": "^4.4.6",
     "react-hot-toast": "^2.5.1",
+    "react-icons": "^5.5.0",
     "react-leaflet": "^4.2.1",
     "react-multi-date-picker": "^4.5.2",
     "react-router-dom": "^6.24.1",
